# aws-boto3-cli

./: .env.example  README.md  pyproject.toml
src/: add_security_group_rule.py  aws_config.py  configure_lifecycle_policy_command_handler.py  create_bucket_command_handler.py  create_bucket_policy_command_handler.py  create_ec2_client.py  create_mysql_command_handler.py  create_mysql_rds.py  create_rds_client.py  create_s3_client.py  create_security_group.py  delete_bucket_command_handler.py  delete_file_from_bucket_command_handler.py  delete_old_versions_command_handler.py  download_and_upload_to_bucket_command_handler.py  exists_bucket_command_handler.py  generate_public_read_policy.py  get_bucket_objects.py  get_file_mime.py  get_required_env.py  host_static_site_command_handler.py  inspire_command_handler.py  instances.py  is_mime_whitelisted.py  is_versioning_enabled_command_handler.py  list_buckets_command_handler.py  list_object_versions_command_handler.py  main.py  move_object.py  organize_bucket_command_handler.py  organized_upload_file_to_bucket_command_handler.py  read_bucket_policy_command_handler.py  rollback_s3_file_command_handler.py  set_object_access_policy_command_handler.py  upload_file_to_bucket_command_handler.py  upload_multipart_file_to_bucket_command_handler.py
